# CuoreOS

./: .clang-format  .gitignore  LICENSE  Makefile  QEMU.mk  README.md  cuore.conf  cuore.toml  exclude.cloc  format  kernel.ld  limine.conf  meson.build  pre-commit.sh  runqemu
include/: Cuoreterm.h  GDT.h  PMA.h  bmp_render.h  cpio_newc.h  global.h  graphics.h  kernel.h  kfont.h  ktests.h  limineabs.h  liminereq.h  memory.h  panic.h  ps2.h  serial.h  stdarg.h  stdbool.h  stdint.h  stdio.h  string.h  time.h  x86.h  x86abs.h
include/arch/: cwarch.h  limineabs.h  x86.h  x86_64.h
include/drivers/: ps2.h  serial.h
include/fs/: cpio_newc.h
include/kernel/: PMA.h  cpir.h  helpers.h  kernel.h  klimine.h  memory.h  paging.h  ps2.h  serial.h  stdio.h  string.h  time.h  x86.h
include/libc/: mem.h  memory.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  string.h  time.h  types.h
src/: UART16550.c  UART16550.h  _time.h  abs.h  ansi_helpers.h  bitmask.h  builtinabs.h  cmdline.c  cmdline.h  crc32.h  crc32c.S  devices.c  devices.h  devicetypes.h  fb_flanterm.c  fb_flanterm.h  kbd_layouts.h  kentry.S  kernel.c  kernel_x86_64.ld  kmain.c  kstate.h  limine.conf  limine.h  logbuf.c  logbuf.h  panic.h  scheduler.c  scheduler.h  stdio.c  stdio.h  symtable.c  symtable.h  sync.h  tests.c  tests.h  time.c
src/acpi/: acpi.c  acpi.h  cedt.c  cedt.h  fadt.c  fadt.h  mcfg.c  mcfg.h  power.c  power.h
src/apic/: cpuid.h  ioapic.c  ioapic.h  lapic.c  lapic.h  madt.c  madt.h
src/arch/: limineabs.c  x86.c
src/binfmt/: elf64.c  elf64.h
src/buildutils/: archiver.c  colorpicker.sh  (+1 more)
tools/: configscreen.py  configsync.py  mkconfig.c  mkramfs.c  mksymtable.py  post-compile-setup.py  pre-compile-setup.py
(+218 files in other folders)
